--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.3",
+    "@types/mdx": "^2.0.10",
     "framer-motion": "^10.16.12",
     "lodash": "^4.17.21",
     "next": "14.0.3",
+    "next-mdx-remote": "^4.4.1",
+    "prism-react-renderer": "^2.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
