--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@monaco-editor/react": "^4.6.0",
     "@next/mdx": "^14.0.3",
     "@types/mdx": "^2.0.10",
     "framer-motion": "^10.16.12",
