--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@next/mdx": "^14.0.3",
     "@types/mdx": "^2.0.10",
+    "contentful": "^10.6.14",
     "framer-motion": "^10.16.12",
     "lodash": "^4.17.21",
     "next": "14.0.3",
@@ -26,6 +27,8 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
