--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@next/mdx": "^14.0.3",
     "@types/mdx": "^2.0.10",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "contentful": "^10.6.14",
     "framer-motion": "^10.16.12",
     "lodash": "^4.17.21",
@@ -26,6 +27,7 @@
     "next-mdx-remote": "^4.4.1",
     "prism-react-renderer": "^2.3.0",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
