--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next/mdx": "^14.0.3",
     "@types/mdx": "^2.0.10",
     "@types/react-copy-to-clipboard": "^5.0.7",
+    "@types/strip-comments": "^2.0.4",
     "contentful": "^10.6.14",
     "framer-motion": "^10.16.12",
     "lodash": "^4.17.21",
@@ -31,7 +32,8 @@
     "react-dom": "^18",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "strip-comments": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
