--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^10.16.12",
     "lodash": "^4.17.21",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "next-mdx-remote": "^4.4.1",
     "prism-react-renderer": "^2.3.0",
     "react": "^18",
