--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mdx": "^2.0.10",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/strip-comments": "^2.0.4",
+    "axios": "^1.6.2",
     "contentful": "^10.6.14",
     "framer-motion": "^10.16.12",
     "lodash": "^4.17.21",
